[portal] fixed contrast for sea style

--- a/portal/src/main/resources/assets/themes/raw/default/theme.less
+++ b/portal/src/main/resources/assets/themes/raw/default/theme.less
@@ -1,7 +1,7 @@
 @import "../../../../../../../../../css-lib/app";
 @import url(https://fonts.googleapis.com/css?family=Lato:300,300italic);
 
-@dark-blue: #387C95;
+@dark-blue: #266881;
 @bright-blue: #23A9AA;
 @black: #2A2829;
 @shiny-blue: #51CCF5;
